[project]
name = "sarah-reddit-analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ollama (>=0.6.1,<0.7.0)",
    "pydantic (>=2.13.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "sarah_reddit_analysis", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
